[package]
name = "linsn-led-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
clippy = "0.0.302"
pnet = "0.35.0"
libc = "0.2.169"
gstreamer = "0.23.2"
gstreamer-app = "0.23.2"
gstreamer-video = "0.23.2"
gstreamer-pbutils = "0.23.2"

[lints.rust]
unused_crate_dependencies = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[lints.clippy]
mod_module_files = "deny"
wildcard_dependencies = "deny"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
collection_is_never_read = "warn"
